--- a/package.json
+++ b/package.json
@@ -15,33 +15,31 @@
   },
   "author": "Nik Kalyani <nik@kalyani.com> https://www.kalyani.com",
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "babel-core": "6.26.3",
-    "babel-loader": "8.0.5",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-0": "6.24.1",
-    "bignumber.js": "8.0.2",
-    "css-loader": "^1.0.0",
-    "express": "4.16.4",
-    "file-loader": "3.0.1",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "openzeppelin-solidity": "^1.10.0",
-    "start-server-webpack-plugin": "2.2.5",
-    "style-loader": "^0.23.1",
-    "superstatic": "6.0.3",
-    "truffle": "5.0.2",
-    "truffle-hdwallet-provider": "1.0.2",
-    "web3": "1.0.0-beta.37",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "3.1.14",
-    "webpack-node-externals": "1.7.2"
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.5",
+    "@babel/plugin-proposal-class-properties": "^7.21.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.21.5",
+    "@babel/preset-env": "^7.21.5",
+    "babel-loader": "^8.2.5",
+    "babel-polyfill": "^6.26.0",
+    "bignumber.js": "^9.0.1",
+    "css-loader": "^6.7.3",
+    "express": "^4.18.2",
+    "file-loader": "^6.2.0",
+    "html-loader": "^4.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "openzeppelin-solidity": "^4.7.3",
+    "start-server-webpack-plugin": "^6.1.0",
+    "style-loader": "^3.3.2",
+    "superstatic": "^7.0.0",
+    "truffle": "^5.5.24",
+    "web3": "^1.8.2",
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.13.3",
+    "webpack-node-externals": "^3.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "truffle-hdwallet-provider": "^1.0.17"
+  }
 }
